[package]
name        = "brev"
description = "helpers for quick and dirty scripting"
version     = "0.1.11"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "WTFPL OR MIT OR Apache-2.0"
repository  = "https://github.com/casey/brev"

[dependencies]
glob    = "^0.2.11"
tempdir = "^0.3"
