[package]
name        = "brev"
description = "helpers for quick and dirty scripting"
version     = "0.2.0"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "CC0-1.0"
repository  = "https://github.com/casey/brev"

[dependencies]
dirs     = "2.0.1"
glob     = "0.3.0"
tempfile = "3.0.0"
